# aide

./: .cursorrules  .env.example  .eslintrc.json  .gitignore  .releaserc.json  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  package.nls.en.json  package.nls.json  package.nls.zh-cn.json  pnpm-lock.yaml  system-architecture.md  tailwind.config.ts  tsconfig.json  vite.config.mts  vite.config.ts  vitest.config.ts
.cursor-rules/: .generate-readme-cursorrules
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml  ci.yml
.husky/: pre-commit
cli/: AGENTS.md  Cargo.toml
cli/src/: main.rs
extension-host/: AGENTS.md  package.json
extension-host/src/: api.ts  index.ts
kit-a943e80cf4-desktop/metadata/: categories.yml  icon-families.yml  icons.yml  sponsors.yml
mcp-server/: AGENTS.md  package-lock.json  package.json
mcp-server/src/: client.ts  index.ts
public/fonts/: inter.css
public/icons/: symbol-icon-theme.json
public/themes/: dark-plus.json  high-contrast-light.json  high-contrast.json  light-plus.json
scripts/: generate-nls.ts  publish.ts
src/: AGENTS.md  App.tsx  AppCore.tsx  AppShell.tsx  index.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_log.rs  activity.rs  auto_update.rs  batch.rs  browser.rs  deep_link.rs  diagnostics.rs  language_selector.rs  lib.rs  main.rs  notebook.rs  output_channels.rs  process.rs  process_utils.rs  prompt_store.rs  rules_library.rs  search.rs  snippets.rs  ssh_terminal.rs  system_specs.rs  tasks.rs  timeline.rs  toolchain.rs  window.rs  workspace.rs  workspace_settings.rs  workspace_symbols.rs  wsl.rs
src-tauri/src/acp/: commands.rs  executor.rs  mod.rs  types.rs
src-tauri/src/ai/: mod.rs  protocol.rs  providers.rs  session.rs  session_commands.rs  storage.rs  thread.rs  tools.rs  types.rs
src-tauri/src/ai/agents/: commands.rs  mod.rs  orchestrator.rs  prompt_generation.rs  storage.rs  storage_types.rs  types.rs
src-tauri/src/context_server/: commands.rs  mod.rs  protocol.rs  transport.rs  types.rs
src-tauri/src/dap/: client.rs  mod.rs  transport.rs
src-tauri/src/dap/commands/: breakpoints.rs  execution.rs  memory.rs  misc.rs  mod.rs  navigation.rs  session.rs  state.rs  threads.rs  types.rs  variables.rs
src-tauri/src/dap/protocol/: events.rs  launch.rs  messages.rs  mod.rs  requests.rs  responses.rs  types.rs
src-tauri/src/dap/session/: adapter.rs  breakpoints.rs  control.rs  core.rs  events.rs  memory.rs  mod.rs  navigation.rs  sources.rs  types.rs  variables.rs
src-tauri/src/extensions/: activation.rs  api.rs  commands.rs  host.rs  marketplace.rs  mod.rs  permissions.rs  plugin_api.rs  registry.rs  state.rs  types.rs  utils.rs  vscode.rs
src-tauri/src/extensions/wasm/: host.rs  mod.rs  runtime.rs
src-tauri/src/extensions/wit/: cortex.wit
src-tauri/src/factory/: audit.rs  commands.rs  events.rs  interception.rs  mod.rs  orchestrator.rs  persistence.rs  types.rs
src-tauri/src/factory/executor/: actions.rs  agents.rs  control_flow.rs  helpers.rs  mod.rs  triggers.rs  types.rs
src-tauri/src/formatter/: commands.rs  handlers.rs  mod.rs  prettier.rs  types.rs
src-tauri/src/fs/: directory.rs  encoding.rs  mod.rs  operations.rs  search.rs  security.rs  types.rs  utils.rs  watcher.rs  workspace_edit.rs
src-tauri/src/git/: bisect.rs  blame.rs  branch.rs  cache.rs  cherry_pick.rs  clone.rs  command.rs  diff.rs  helpers.rs  hunk.rs  lfs.rs  lines.rs  log.rs  merge.rs  mod.rs  providers.rs  rebase.rs  remote.rs  staging.rs  stash.rs  status.rs  submodule.rs  tag.rs  types.rs  watcher.rs  worktree.rs
src-tauri/src/lsp/: mod.rs  types.rs
src-tauri/src/lsp/client/: conversions.rs  core.rs  document_sync.rs  extended_features.rs  language_features.rs  mod.rs  protocol_types.rs
src-tauri/src/lsp/commands/: actions.rs  code_lens.rs  completion.rs  document.rs  events.rs  features.rs  formatting.rs  mod.rs  multi_provider.rs  navigation.rs  semantic_tokens.rs  server.rs  state.rs  symbols.rs
src-tauri/src/mcp/: commands.rs  mod.rs  socket_server.rs  tools.rs
src-tauri/src/remote/: commands.rs  connection.rs  credentials.rs  error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/repl/: jupyter.rs  kernel.rs  mod.rs  types.rs
src-tauri/src/resources/: shell-integration-bash.sh  shell-integration-fish.fish  shell-integration-pwsh.ps1  shell-integration-zsh.sh
src-tauri/src/sandbox/: acl.rs  audit.rs  cap.rs  dpapi.rs  elevated_impl.rs  env.rs  identity.rs  mod.rs  process.rs  sandbox_users.rs  token.rs  winutil.rs
src-tauri/src/settings/: commands.rs  mod.rs  profiles.rs  secure_store.rs  storage.rs  types.rs
src-tauri/src/terminal/: commands.rs  constants.rs  flow_control.rs  mod.rs  process.rs  shell_integration.rs  state.rs  types.rs
src-tauri/src/testing/: coverage.rs  detection.rs  discovery.rs  execution.rs  mod.rs  single_test.rs  types.rs  watch.rs
src-tauri/window-vibrancy/: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.spdx
src-tauri/window-vibrancy/.changes/: config.json
src-tauri/window-vibrancy/examples/: tao.rs  winit.rs
src-tauri/window-vibrancy/examples/tauri/: .gitignore  package.json
src-tauri/window-vibrancy/examples/tauri/public/: index.html
src-tauri/window-vibrancy/examples/tauri/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/window-vibrancy/examples/tauri/src-tauri/capabilities/: default.json
src-tauri/window-vibrancy/examples/tauri/src-tauri/src/: main.rs
src-tauri/window-vibrancy/src/: lib.rs  windows.rs
src-tauri/window-vibrancy/src/macos/: liquid_glass.rs  mod.rs  ns_glass_effect_view_tagged.rs  ns_visual_effect_view_tagged.rs  vibrancy.rs
src/__tests__/: setup.ts
src/api/: admin.ts  agents.ts  index.ts  share.ts
src/components/: AccessibilityHelp.tsx  ActivityBar.tsx  ActivityIndicator.tsx  AgentsManager.tsx  AgentsSidebar.tsx  ApprovalDialog.tsx  AutoUpdate.tsx  AuxiliaryBar.tsx  AuxiliaryWindow.tsx  BookmarksPanel.tsx  Breadcrumbs.tsx  BufferSearch.tsx  ChatMessage.tsx  (+88 more)
(+1931 files in other folders)
