[package]
name = "cortex-desktop-cli"
version = "0.1.0"
description = "Command-line interface for Cortex Desktop"
authors = ["Cortex Team"]
license = "Apache-2.0"
repository = "https://github.com/CortexLM/cortex"
edition = "2021"

[[bin]]
name = "cortex"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "wrap_help", "string"] }

# Error handling
anyhow = "1"

# URL encoding for deep links
urlencoding = "2"

# Path handling
dunce = "1"
dirs = "6"

# Process management
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
