[package]
name = "window-vibrancy"
description = "Make your windows vibrant."
authors = ["Tauri Programme within The Commons Conservancy"]
version = "0.7.1"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/tauri-plugin-vibrancy"
documentation = "https://docs.rs/tauri-plugin-vibrancy"
keywords = ["vibrancy", "acrylic", "mica", "blur", "windowing"]
categories = ["gui"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[dependencies]
raw-window-handle = "0.6"

[dev-dependencies]
tao = "0.34"
winit = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.60.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# 0.3.2 is the first version with NSGlassEffectView
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "NSApplication",
  "NSColor",
  "NSGlassEffectView",
  "NSGraphics",
  "NSResponder",
  "NSView",
  "NSVisualEffectView",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSThread",
  "NSGeometry",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "std",
] }
