[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
window-vibrancy = { path = "../../../" }
